--- a/views/head.erb
+++ b/views/head.erb
@@ -1,8 +1,5 @@
 <div id="picture_head">
 	<div id="schedule_event">
-		<img src="/images/skaterhockey/club5.png" /><br />
-		16.04.11 Powerkrauts Berlin<br />
-		17.04.11 ECH Turtles Berlin
-		
+		<%=next_game%>
 	</div>
 </div>
