--- a/views/sidebar.erb
+++ b/views/sidebar.erb
@@ -1,8 +1,8 @@
-<!--<div id="weather">
+<div id="weather">
 	<h2>Wetter</h2>
-  <%#=weather%>
+  <%=weather%>
 </div>
--->
+
 <div id="standings">
 	<div id="head">BISHL Tabelle</div>
   <div id="standings_inner">
