--- a/views/footer.erb
+++ b/views/footer.erb
@@ -1,8 +1,8 @@
 <div id="inner">
 <p>	
-This page was realized with <a href="http://sinatrarb.com">Sinatra</a> (crowd applauds histerically), implemented by <a href="http://code79.net">Daniel Schmidt</a> <%=Time.now.year%> (crowd stopps applauding immediately).
+This page was realised with <a href="http://sinatrarb.com">Sinatra</a> (crowd applauds histerically), implemented by <a href="http://code79.net">Daniel Schmidt</a> <%=Time.now.year%>.
 
-It uses the <a href="https://github.com/dsci/bishl">BISHL gem</a>.<br />
+It uses the <a href="https://github.com/dsci/bishl">BISHL gem</a>. All game data from <a href="http://www.bishl.de">bishl.de</a> .<br />
 <%=link_to("Impressum", :impressum)%>
 </p>
 </div>
