--- a/views/schedule_list.erb
+++ b/views/schedule_list.erb
@@ -2,7 +2,7 @@
 	<table class="schedule" border="0" cellpadding="0" cellspacing="0">
     <%@games.each do |game|%>
          <tr class="<%=home_css(game)%>">
-           <td class="date"><%=game.date.strftime('%d.%m.%Y')%></td>
+           <td class="date"><%=game_time(game)%></td>
            <td><%=opponent(game)%></td>
            <td class="stadium"><%=game.stadium%></td>
            <td><%=result(game)%></td>
