updated practise days

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,4 @@
-<div id="infobox"><strong>Trainingszeiten</strong>: Donnerstag, 18.00 Uhr Park 5.1, Leipzig-Grünau.</div>
+<div id="infobox"><strong>Trainingszeiten</strong>: Dienstag u. Donnerstag, 18.00 Uhr Park 5.1, Leipzig-Grünau.</div>
 <%@news.each do |news|%>
 	<div class="news_entry">
 		<div class="news_title"><%=news.title%></div>
