--- a/views/index.erb
+++ b/views/index.erb
@@ -1,8 +1,3 @@
 <div id="infobox"><strong>Trainingszeiten</strong>: Dienstag u. Donnerstag, 19.00 Uhr Park 5.1, Leipzig-Grünau.</div>
-<%@news.each do |news|%>
-	<div class="news_entry">
-		<div class="news_title"><%=news.title%></div>
-		<div class="news_text"><%=s(textilize(news.text))%></div>
-		<div class="news_more"><a href="/news/<%=news.id%>">mehr</a></div>
-	</div>
-<%end%>
+<%= partial :news_index %>
+<a href="/archiv">ältere Nachrichten</a>
