Add News support to ExtJs
With this commit the management part - implemented with ExtJs -
gets a news store, a news model and a list view.

--- a/lib/views/admin_layout.slim
+++ b/lib/views/admin_layout.slim
@@ -3,7 +3,7 @@ head
 	title = @page_title
 	meta name="keywords" content="template language"
 	script src="/javascripts/ext/ext-all-debug.js" type="text/javascript"
-	link rel="stylesheet" type="text/css" href="/stylesheets/defaults.css" media="all"
+	link rel="stylesheet" type="text/css" href="/stylesheets/admin.css" media="all"
 	link rel="stylesheet" type="text/css" href="/javascripts/ext/resources/css/ext-all.css"
 body
 	== yield
