--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,22 @@
-<div id="infobox"><strong>Trainingszeiten</strong>: Dienstag u. Donnerstag, 18.00 Uhr Park 5.1, Leipzig-Grünau.<br />
+<div id="infobox">
+<strong>Trainingszeiten</strong>: 
+<ul>
+  <li>13.11.2011</li>
+  <li>20.11.2011</li>
+  <li>27.11.2011</li>
+  <li>18.12.2011</li>
+  <li>08.01.2012</li>
+  <li>15.01.2012</li>
+  <li>22.01.2012</li>
+  <li>29.01.2012</li>
+  <li>05.02.2012</li>
+  <li>19.02.2012</li>
+  <li>26.02.2012</li>
+  <li>11.03.2012</li>
+  <li>25.03.2012</li>
+  <li>15.04.2012</li>
+</ul>
+Jeweils 20 Uhr, am 20. November jedoch <strong>18 Uhr</strong><br />
 Fragen zum Training könnt ihr per eMail stellen: dsci&#064;skaterhockey-leipzig.de</div>
 <%= partial :news_index %>
 <a href="/archiv">ältere Nachrichten</a>
