--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,5 @@
 <div id="infobox">
+<img src='/images/skaterhockey/aushang.png' />
 <strong>Trainingszeiten Winter 2011/2012</strong>: 
 <ul style="list-style:none;">
   <li>13.11.2011 - Mehrzweckhalle</li>
@@ -17,6 +18,7 @@
   <li>15.04.2012 - Mehrzweckhalle</li>
 </ul>
 Jeweils 20 Uhr, am 20. November jedoch <strong>18 Uhr</strong><br />
-Fragen zum Training könnt ihr per eMail stellen: dsci&#064;skaterhockey-leipzig.de</div>
+Fragen zum Training könnt ihr per eMail stellen: dsci&#064;skaterhockey-leipzig.de
+</div>
 <%= partial :news_index %>
 <a href="/archiv">ältere Nachrichten</a>
