--- a/views/index.erb
+++ b/views/index.erb
@@ -9,14 +9,14 @@
   <li>15.01.2012 - Mehrzweckhalle</li>
   <li>22.01.2012 - Mehrzweckhalle</li>
   <li>29.01.2012 - Mehrzweckhalle</li>
-  <li>05.02.2012 - Mehrzweckhalle</li>
-  <li>19.02.2012 - Mehrzweckhalle</li>
-  <li>26.02.2012 - Mehrzweckhalle</li>
-  <li>11.03.2012 - Mehrzweckhalle</li>
-  <li>25.03.2012 - Mehrzweckhalle</li>
-  <li>15.04.2012 - Mehrzweckhalle</li>
+  <li>05.02.2012 - Mehrzweckhalle, 19 Uhr</li>
+  <li>19.02.2012 - Mehrzweckhalle, 19 Uhr</li>
+  <li>26.02.2012 - Mehrzweckhalle, 20 Uhr</li>
+  <li>11.03.2012 - Mehrzweckhalle, 20 Uhr</li>
+  <li>25.03.2012 - Mehrzweckhalle, 20 Uhr</li>
+  <li>15.04.2012 - Mehrzweckhalle, 20 Uhr</li>
 </ul>
-Jeweils 20 Uhr, am 20. November jedoch <strong>18 Uhr</strong><br />
+<br />
 Fragen zum Training könnt ihr per eMail stellen: dsci&#064;skaterhockey-leipzig.de
 </div>
 <img src='/images/skaterhockey/aushang.png' />
