--- a/views/index.erb
+++ b/views/index.erb
@@ -1,21 +1,12 @@
 <div id="infobox">
-<strong>Trainingszeiten Winter 2011/2012</strong>: 
+<strong>Trainingszeiten Sommer</strong>: 
+Ab Kalenderwoche 23:
+<br/>
 <ul style="list-style:none;">
-  <li>13.11.2011 - Mehrzweckhalle</li>
-  <li>20.11.2011 - Mehrzweckhalle</li>
-  <li>27.11.2011 - Mehrzweckhalle</li>
-  <li>18.12.2011 - Mehrzweckhalle</li>
-  <li>08.01.2012 - Mehrzweckhalle</li>
-  <li>15.01.2012 - Mehrzweckhalle</li>
-  <li>22.01.2012 - Mehrzweckhalle</li>
-  <li>29.01.2012 - Mehrzweckhalle</li>
-  <li>05.02.2012 - Mehrzweckhalle, 19 Uhr</li>
-  <li>19.02.2012 - Mehrzweckhalle, 19 Uhr</li>
-  <li>26.02.2012 - Mehrzweckhalle, 20 Uhr</li>
-  <li>11.03.2012 - Mehrzweckhalle, 20 Uhr</li>
-  <li>25.03.2012 - Mehrzweckhalle, 20 Uhr</li>
-  <li>15.04.2012 - Mehrzweckhalle, 20 Uhr</li>
+<li>Dienstags, 18.30 Uhr - Rollsportplatz Leipzig, Grünau</li>
+<li>Mittwochs, 20:00 Uhr - Sporthalle Dinterplatz, Borna</li>
 </ul>
+
 <br />
 Fragen zum Training könnt ihr per eMail stellen: dsci&#064;skaterhockey-leipzig.de
 </div>
