--- a/views/index.erb
+++ b/views/index.erb
@@ -3,7 +3,7 @@
 Ab Kalenderwoche 23:
 <br/>
 <ul style="list-style:none;">
-<li style="color:green">Dienstag, 18:15 Uhr - Rollsportplatz Leipzig, Grünau - Laufgruppe</li>
+<li style="color:green">Dienstags, 18:15 Uhr - Rollsportplatz Leipzig, Grünau - Laufgruppe</li>
 <li>Dienstags, 19:00 Uhr - Rollsportplatz Leipzig, Grünau</li>
 <li>Mittwochs, 20:00 Uhr - Sporthalle Dinterplatz, Borna</li>
 </ul>
