--- a/views/index.erb
+++ b/views/index.erb
@@ -1,11 +1,10 @@
 <div id="infobox">
 <strong>Trainingszeiten Sommer</strong>: 
-Ab Kalenderwoche 23:
+Ab 2013:
 <br/>
 <ul style="list-style:none;">
-<li style="color:green">Dienstags, 18:15 Uhr - Rollsportplatz Leipzig, Grünau - Laufgruppe</li>
-<li>Dienstags, 19:00 Uhr - Rollsportplatz Leipzig, Grünau</li>
-<li>Mittwochs, 20:00 Uhr - Sporthalle Dinterplatz, Borna</li>
+<li style="color:green">
+<li>Donnerstags, 20:00 Uhr - Turnhalle Heinrich-Pestalozzi -Schule (Böhlitz-Ehrenberg)</li>
 </ul>
 
 <br />
